--- a/makefile.inc
+++ b/makefile.inc
@@ -36,7 +36,9 @@ export MVN_REPO := $(HOME)/.m2/repository
 #export sable := $(DevLibrary)/sablecc-3.6
 jaxrs := $(MVN_REPO)/org/glassfish/jersey/bundles/jaxrs-ri/2.27/jaxrs-ri-2.27.jar
 export jaxrs := $(jaxrs):$(MVN_REPO)/org/glassfish/jersey/connectors/jersey-apache-connector/2.27/jersey-apache-connector-2.27.jar
-export apache_http := $(MVN_REPO)/org/apache/httpcomponents/httpclient/4.5.5/httpclient-4.5.5.jar
+export apache_http_client := $(MVN_REPO)/org/apache/httpcomponents/httpclient/4.5.5/httpclient-4.5.5.jar
+export apache_http_core := $(MVN_REPO)/org/apache/httpcomponents/httpcore/4.4.9/httpcore-4.4.9.jar
+export commons_logging := $(MVN_REPO)/commons-logging/commons-logging/1.2/commons-logging-1.2.jar
 export javaxjson := $(MVN_REPO)/javax/json/javax.json-api/1.1.2/javax.json-api-1.1.2.jar
 #export jersey := $(DevLibrary)/jersey/*
 CUCUMBER_CLASSPATH := $(MVN_REPO)/info/cukes/cucumber-java/1.2.5/cucumber-java-1.2.5.jar
