--- a/makefile.inc
+++ b/makefile.inc
@@ -34,12 +34,24 @@ export UserHome := $(HOME)
 # Locations of dev tools:
 export MVN_REPO := $(HOME)/.m2/repository
 #export sable := $(DevLibrary)/sablecc-3.6
-jaxrs := $(MVN_REPO)/org/glassfish/jersey/bundles/jaxrs-ri/2.27/jaxrs-ri-2.27.jar
-export jaxrs := $(jaxrs):$(MVN_REPO)/org/glassfish/jersey/connectors/jersey-apache-connector/2.27/jersey-apache-connector-2.27.jar
+#jaxrs := $(MVN_REPO)/org/glassfish/jersey/bundles/jaxrs-ri/2.27/jaxrs-ri-2.27.jar
+export jersey_common := $(MVN_REPO)/org/glassfish/jersey/core/jersey-common/2.27/jersey-common-2.27.jar
+export jersey_client := $(MVN_REPO)/org/glassfish/jersey/core/jersey-client/2.27/jersey-client-2.27.jar
+export jaxrs := $(MVN_REPO)/org/glassfish/jersey/connectors/jersey-apache-connector/2.27/jersey-apache-connector-2.27.jar
 export apache_http_client := $(MVN_REPO)/org/apache/httpcomponents/httpclient/4.5.5/httpclient-4.5.5.jar
 export apache_http_core := $(MVN_REPO)/org/apache/httpcomponents/httpcore/4.4.9/httpcore-4.4.9.jar
 export commons_logging := $(MVN_REPO)/commons-logging/commons-logging/1.2/commons-logging-1.2.jar
+export javax_annotation := $(MVN_REPO)/javax/annotation/javax.annotation-api/1.3.2/javax.annotation-api-1.3.2.jar
+export hk2 := $(MVN_REPO)/org/glassfish/hk2/hk2/2.4.0/hk2-2.4.0.jar
+export hk2_api := $(MVN_REPO)/org/glassfish/hk2/hk2-api/2.4.0/hk2-api-2.4.0.jar
+export hk2_utils := $(MVN_REPO)/org/glassfish/hk2/hk2-utils/2.5.0-b61/hk2-utils-2.5.0-b61.jar
+export hk2_locator := $(MVN_REPO)/org/glassfish/hk2/hk2-locator/2.4.0/hk2-locator-2.4.0.jar
+export javassist := $(MVN_REPO)/org/javassist/javassist/3.22.0-GA/javassist-3.22.0-GA.jar
 export javaxjson := $(MVN_REPO)/javax/json/javax.json-api/1.1.2/javax.json-api-1.1.2.jar
+export javax_ws := $(MVN_REPO)/javax/ws/rs/javax.ws.rs-api/2.1/javax.ws.rs-api-2.1.jar
+export javax_json_glassfish := $(MVN_REPO)/org/glassfish/javax.json/1.1.2/javax.json-1.1.2.jar
+export jersey_inject := $(MVN_REPO)/org/glassfish/jersey/inject/jersey-hk2/2.27/jersey-hk2-2.27.jar
+export javax_named := $(MVN_REPO)/javax/inject/javax.inject/1/javax.inject-1.jar
 #export jersey := $(DevLibrary)/jersey/*
 CUCUMBER_CLASSPATH := $(MVN_REPO)/info/cukes/cucumber-java/1.2.5/cucumber-java-1.2.5.jar
 CUCUMBER_CLASSPATH := $(CUCUMBER_CLASSPATH):$(MVN_REPO)/info/cukes/cucumber-core/1.2.5/cucumber-core-1.2.5.jar
