--- a/common/pom.xml
+++ b/common/pom.xml
@@ -17,43 +17,37 @@
 		
 		<!-- See https://jersey.github.io/documentation/latest/modules-and-dependencies.html -->
 		
-		<!--
-		<dependency>
-			<groupId>org.glassfish.jersey.bundles</groupId>
-			<artifactId>jaxrs-ri</artifactId>
-			<version>2.27</version>
-		</dependency>
-		-->
-		
-		<dependency>
-			<groupId>javax.inject</groupId>
-			<artifactId>javax.inject</artifactId>
-			<version>1</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.glassfish.jersey.core</groupId>
-			<artifactId>jersey-common</artifactId>
-			<version>2.27</version>
-		</dependency>
-		
 		<dependency>
 			<groupId>org.glassfish.jersey.core</groupId>
 			<artifactId>jersey-client</artifactId>
-			<version>2.27</version>
+			<version>2.21</version>
 		</dependency>
-		
+
 		<dependency>
-			<groupId>org.glassfish.jersey.inject</groupId>
-			<artifactId>jersey-hk2</artifactId>
-			<version>2.27</version>
-		</dependency>		
+			<groupId>org.glassfish.jersey.connectors</groupId>
+			<artifactId>jersey-grizzly-connector</artifactId>
+			<version>2.21</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>org.glassfish.jersey.connectors</groupId>
 			<artifactId>jersey-apache-connector</artifactId>
-			<version>2.27</version>
+			<version>2.21</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.glassfish.jersey.connectors</groupId>
+			<artifactId>jersey-jetty-connector</artifactId>
+			<version>2.21</version>
+		</dependency>
+
+
+		
+		
+		
+		
+		
+		
 		
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
@@ -80,47 +74,16 @@
 		</dependency>
 		
 		<dependency>
-			<groupId>org.glassfish.hk2</groupId>
-			<artifactId>hk2-api</artifactId>
-			<version>2.5.0-b61</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.glassfish.hk2</groupId>
-			<artifactId>hk2</artifactId>
-			<version>2.4.0</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.glassfish.hk2</groupId>
-			<artifactId>hk2-utils</artifactId>
-			<version>2.4.0</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.glassfish.hk2</groupId>
-			<artifactId>hk2-locator</artifactId>
-			<version>2.4.0</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.javassist</groupId>
-			<artifactId>javassist</artifactId>
-			<version>3.22.0-GA</version>
+			<groupId>javax.json</groupId>
+			<artifactId>javax.json-api</artifactId>
+			<version>1.1.2</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.glassfish</groupId>
 			<artifactId>javax.json</artifactId>
-			<version>1.1.2</version>
-		</dependency>		
-		
-		
-		<dependency>
-			<groupId>javax.json</groupId>
-			<artifactId>javax.json-api</artifactId>
-			<version>1.1.2</version>
-		</dependency>
+			<version>1.0.4</version>
+		</dependency>	
 		
 		<dependency>
 			<groupId>javax.ws.rs</groupId>
