--- a/task_runtime/pom.xml
+++ b/task_runtime/pom.xml
@@ -8,7 +8,7 @@
 	<packaging>jar</packaging>
 	
 	<parent>
-		<groupId>scaledmarkets</groupId>
+		<groupId>com.scaledmarkets.dabl</groupId>
 		<artifactId>dabl</artifactId>
 		<version>0.1</version>
 	</parent>
@@ -16,13 +16,13 @@
 	<dependencies>
 		
 		<dependency>
-			<groupId>scaledmarkets</groupId>
+			<groupId>com.scaledmarkets.dabl</groupId>
 			<artifactId>parser</artifactId>
 			<version>0.1</version>
 		</dependency>
 		
 		<dependency>
-			<groupId>scaledmarkets</groupId>
+			<groupId>com.scaledmarkets.dabl</groupId>
 			<artifactId>common</artifactId>
 			<version>0.1</version>
 		</dependency>
